// Original file: src/protos/4/office.proto


export interface Office {
  'id'?: (string);
  'officeName'?: (string);
  'companyId'?: (string);
  'addressId'?: (string);
}

export interface Office__Output {
  'id': (string);
  'officeName': (string);
  'companyId': (string);
  'addressId': (string);
}
