// Original file: src/protos/4/office.proto


export interface Update {
  'id'?: (string);
  'officeName'?: (string);
  'companyId'?: (string);
  'addressId'?: (string);
}

export interface Update__Output {
  'id': (string);
  'officeName': (string);
  'companyId': (string);
  'addressId': (string);
}
